Font Styles changed of h4 , h5

--- a/public/index.html
+++ b/public/index.html
@@ -23,7 +23,7 @@
 <link href="https://fonts.googleapis.com/css2?family=Indie+Flower&display=swap" rel="stylesheet"> 
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Righteous&display=swap" rel="stylesheet"> 
-
+<link href="https://fonts.googleapis.com/css2?family=M+PLUS+Rounded+1c:wght@300&display=swap" rel="stylesheet"> 
 <link href="https://fonts.googleapis.com/css2?family=Caveat&family=Dancing+Script:wght@600&family=Noto+Serif+JP:wght@300&family=Pacifico&family=Shadows+Into+Light&display=swap" rel="stylesheet"> 
 <link href="https://fonts.googleapis.com/css2?family=Amatic+SC:wght@700&family=Caveat&family=Dancing+Script:wght@600&family=Noto+Serif+JP:wght@300&family=Pacifico&family=Shadows+Into+Light&display=swap" rel="stylesheet">
 <link rel="preconnect" href="https://fonts.gstatic.com">
